Fix Travis build file.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ branches:
   only:
     - master
 notifications:
-  irc: "chat.freenode.net#cloudi"
+  irc:
+    channels:
+      - "chat.freenode.net#cloudi"
     on_success: change
     on_failure: always
